--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Steampunk Pub</title>
+    <title>The Misty Gear</title>
     <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Steampunk Pub</h1>
+        <h1>The Misty Gear</h1>
         <p>Donde la fantasía y el vapor se mezclan en cada copa</p>
     </header>
     <nav>
